Fixing profile pictures not showing up

--- a/src/Pages/dashboard/messageboard/messageboard.module.css
+++ b/src/Pages/dashboard/messageboard/messageboard.module.css
@@ -97,6 +97,9 @@
 
 .buttonContainer {
   display: flex;
+  /* justify-content: left;
+  margin-left: 100px; */
+
   justify-content: center;
   align-items: center;
   width: 100%;
